Add web configuration with cors filter